Fixed overflowing text in player profile

--- a/src/angular/app/players/player-profile/player-profile.component.less
+++ b/src/angular/app/players/player-profile/player-profile.component.less
@@ -15,6 +15,7 @@
 
   &__info {
     flex-grow: 1;
+    max-width: 60%;
   }
 
   &__name-wrapper {
@@ -25,6 +26,29 @@
 
   &__name {
     margin-right: 1rem;
+
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  &__fullname {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  &__email {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  &__description {
+    overflow: hidden;
+    text-overflow: ellipsis;
+
+    font-style: italic;
   }
 
   &__flag {
